remove Config update